Final exam:completed image_work.ipynb as much as possible

--- a/Final-Exam/fib_file.ipynb
+++ b/Final-Exam/fib_file.ipynb
@@ -7,7 +7,42 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def fib_file(n, fname):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# n is  of number of terms to be calculated . fname is file name to be writtern "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    " writer = open('fname_n.txt', 'w')\n",
+    "    writer.write('n            F_n\\n')\n",
+    "        i=0\n",
+    "            while i < n:\n",
+    "            nn= 0\n",
+    "            fn= nn + (nn-1)\n",
+    "            nn += 1\n",
+    "            writer.writer ('%d            %d' (%nn, %fn))\n",
+    "        i +=1\n",
+    "    \n",
+    "    writer.close()     \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
